# DGCNN-on-FPGA

./: .gitignore  .gitmodules  AWS-F1-Wiki.md  CMakeLists.txt  Doxyfile  readme.md
bank_opt/: CMakeLists.txt  bank_optimizer.py  bank_optimizer_v2.py  readme.md
bank_opt/inc/: FakeModelArchTop.h  FakeTensorF.h  FakeTensorI.h  Helper.h  Layers.h  ModelArchTop01.h  TensorF.h  TensorI.h  config.h
bank_opt/src/: FakeModelArchTop.cpp  FakeTensorF.cpp  FakeTensorI.cpp  Helper.cpp  Layers.cpp  MemBankOptimizer.cpp  ModelArchTop01.cpp  TensorF.cpp  TensorI.cpp
doc/: optimization_report.md  summary_ops.html  summary_ops.md
doc/CPU Time Per Layer/: cpuimplementation_layerbased.xlsx
doc/ClassificationOps/: Concat2.txt  Conv2d.txt  DivideTiled.txt  Gather.txt  MatAdd.txt  MatAddTiled.txt  MatSub.txt  MatSubTiled.txt  Matmul.txt  Matmul_Scalar.txt  Mean.txt  MultiplyTiled.txt  ReLU.txt  ReduceMax.txt  ReduceSum.txt  ReduceSum4D.txt  Square.txt  Tile.txt  TopK.txt  Transpose.txt  Variance.txt  ops_list.txt
doc/FPGA Runs/: analyzer.py  parser.py  performance.py  readme.md
doc/FPGA Runs/fpgarun03/: DeepPointV1FPGA_Host_Log.txt  analyze(deprecated).py  readme.md
doc/FPGA Runs/fpgarun03/profile/: profile_summary.csv
doc/FPGA Runs/fpgarun03/timeline/: timeline_trace.wcfg  timeline_trace.wdb
doc/FPGA Runs/fpgarun04_config01/00/: cpuimplementation_layerbased.xlsx  profile_summary.csv  timeline_trace.csv
doc/FPGA Runs/fpgarun04_config01/01/: timeline_trace.csv
doc/FPGA Runs/fpgarun04_config01/02/: profile_summary.csv  timeline_trace.csv
doc/FPGA Runs/fpgarun04_config01/04/: timeline_trace.csv
doc/FPGA Runs/fpgarun04_config01/05/: profile_summary.csv
doc/FPGA Runs/fpgarun04_config01/06/: profile_summary.csv  timeline_trace.csv
doc/FPGA Runs/fpgarun04_config01/07/: profile_summary.csv  timeline_trace.csv
doc/FPGA Runs/fpgarun04_config01/08/: profile_summary.csv
doc/FPGA Runs/fpgarun04_config01/09/: timeline_trace.csv
doc/FPGA Runs/fpgarun04_config01/10/: profile_summary.csv
doc/FPGA Runs/fpgarun04_config01/11(opt_objective)/: timeline_trace.csv
doc/FPGA_Runs/: analyzer.py  parser.py  performance.py  readme.md
doc/FPGA_Runs/fpgarun03/: analyzed.xlsx  host_log_analyzed.txt  readme.md
doc/FPGA_Runs/fpgarun03/config/: config.h.txt
doc/FPGA_Runs/fpgarun03/profile/: profile_summary.html
doc/FPGA_Runs/fpgarun03/timeline/: timeline_trace.csv
doc/FPGA_Runs/fpgarun04_config01/00/: anyimplementaion_layerbased_host_device.xlsx  xilinximplementaion_datamover_deviceonly.xlsx  xilinximplementaion_kernelbased_deviceonly.xlsx
doc/FPGA_Runs/fpgarun04_config01/01/: profile_summary.csv
doc/FPGA_Runs/fpgarun04_config01/03/: profile_summary.csv  timeline_trace.csv
doc/FPGA_Runs/fpgarun04_config01/04/: profile_summary.csv
doc/Kernel Documentation/: Chapter00.tex  Chapter01.tex  Chapter02.tex  TaskKernels_Xilinx.tex
doc/Kernel Execution Times(CUDA-GPU)/: .~lock.Sorted_Report_Latency.ods#  RawReport.txt  Sorted_Report.ods  Sorted_Report_Latency.ods
doc/WeightsPerKernel/: WeightsPerKernel.md
doc/gemm_hls_limits/: gemm_hls_limits.md  gemmhls_params.md
inc/: ClassifierMultiPlatform.h  ModelArchTop01.h  ModelArchTop02.h  ModelArchTop04.h  ModelArchTop05.h  PlatformImplementation.h  PlatformSelector.h  TensorF.h  TensorI.h  WeightsLoader.h  WorkScheduler.h  build_config.h
inc/cpu_imp/: CpuImplementation.h
inc/ocl_imp/: DataMover.h  OclTensorF.h  OclTensorI.h
inc/ocl_imp/xilinx/: AxiHelper.h  Conv2D.h  ReductionHelper.h  VectorizationHelper.h  XilinxImpUnitTests.h  XilinxImplementation.h  xcl.h  xcl2.hpp
scripts/: LaunchDeepPointV1FPGA.sh.in  PasteBinAgentForAutoBuilds.py  PostRoute.tcl  SlrUtilizationReport.tcl  SlrUtilizationReport.tcl.in  SynthesisScriptLauncherBatch.sh.in  autobuild_hw.sh  autobuild_hwemu.sh  autobuild_swemu.sh  gather_results.sh  sdaccel.ini  xrt.ini.in
src/: ClassifierMultiPlatform.cpp  HostTest.cpp  MainExecutable.cpp  ModelArchTop01.cpp  ModelArchTop02.cpp  ModelArchTop04.cpp  ModelArchTop05.cpp  PlatformImplementation.cpp  PlatformSelector.cpp  TensorF.cpp  TensorI.cpp  WeightsLoader.cpp  WorkScheduler.cpp
src/cpu_imp/: CpuImplementation.cpp
src/kernels/: readme.md
src/kernels/xilinx/: concat.cl  concat.cpp  conv2_1x1_direct.cpp  conv2mlp.cl  datamover.cpp  datamoverfloat.cpp  datamoverinteger.cpp  gather.cl  gather.cpp  matmul.cl  matmul.cpp  matops.cl  matops.cpp  pad_unpad.cpp  padding.cpp  reduce.cpp  reduce_max.cl  reducemax.cl  reducemax.cpp  reducesum.cl  reducesum.cpp  reducesum4d.cl  reducesum4d.cpp  relu.cl  relu.cpp  relu_sqrt_square.cpp  splitfloat.cl  splitinteger.cl  sqrt.cl  sqrt.cpp  square.cl  square.cpp  tile.cl  tile.cpp  topk.cl  topk.cpp  topk_insertionsort.cpp  topk_mergesort.cpp  topk_mergesort_dataflow.cpp  topk_mergesortdf_pe.cpp  (+3 more)
src/ocl_imp/: DataMover.cpp  OclTensorF.cpp  OclTensorI.cpp
src/ocl_imp/xilinx/: XilinxImpUnitTests.cpp  XilinxImplementation.cpp  xcl.cpp  xcl2.cpp
test/: CMakeLists.txt
test/common/inc/: PaddingCpu.h  Utility.h
test/concat/: CMakeLists.txt
test/conv2/: CMakeLists.txt
test/conv2/inc/: Conv2Helper.h
test/conv2/src/: CpuTestConvolution.cpp
test/gather/: CMakeLists.txt
test/gather/src/: CpuTestGather.cpp
test/matmul/: CMakeLists.txt
test/matmul/src/: CpuTestMatmul.cpp
test/matops/: CMakeLists.txt
test/matops/src/: CpuTestMatops.cpp
test/padding/: CMakeLists.txt
test/padding/src/: CpuTestPadding.cpp
test/reducemax/: CMakeLists.txt
test/reducemax/src/: CpuTestReduceMax.cpp
test/reducesum/: CMakeLists.txt
test/reducesum/src/: CpuTestReduceSum.cpp
test/reducesum4d/: CMakeLists.txt
test/reducesum4d/src/: CpuTestReduceSum4D.cpp
test/relu_sqrt_square/: CMakeLists.txt
test/tile/: CMakeLists.txt
test/tile/src/: CpuTestTile.cpp
test/topk/: CMakeLists.txt
test/topk/src/: CpuTestTopk.cpp
test/topkdf/: CMakeLists.txt
test/topkdf/src/: CpuTestTopkMergeSortDF.cpp
test/transpose/: CMakeLists.txt
test/transpose/src/: CpuTestTranspose.cpp
test/unpadding/: CMakeLists.txt
test/unpadding/src/: CpuTestUnpadding.cpp
(+290 files in other folders)
